<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lyrics Bank</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Lyrics Bank!</string>
    <string name="opcao">Choice your option:</string>
    <string name="bCadastroArtista">Cadastro de Artistas</string>
    <string name="bCadastroLetra">Cadastre uma nova letra</string>
    <string name="bListagem">Pesquise uma música</string>
    <string name="bImage">Obter Imagem</string>
    <string name="title_activity_artist_registry">New Singer</string>
    <string name="title_activity_artist_list">List Singers</string>
    <string name="title_activity_lyrics_registry">New Lyric</string>
    <string name="title_activity_lyrics_list">List Lyrics</string>
    <string name="hello_world">Hello world!</string>
    <string name="lyrics_header">Nova Música</string>
    <string name="artist_header">Novo Artista</string>
    <string name="artist_focus">Insira o nome do artista</string>
    <string name="lyric_name_focus">Insira o nome da música</string>
    <string name="artist_name_focus">Selecione o artista</string>
    <string name="lyric_focus">Insira a letra da música</string>
    <string name="lyric_name">Song Title</string>
    <string name="letra">Song Lyrics</string>
    <string name="artist_name">Singer Name</string>
    <string name="imagem">Image</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="lyric_Header_List">Letras de Músicas</string>
    <string name="optMusica">Músicas</string>
    <string name="lyric_Header_artistas">Artistas</string>
    <string name="artist_Header_List">Artistas</string>
    <string name="voltar">Back</string>
    <string name="b_Artist_Insert">New Singer</string>
    <string name="b_Lyric_Insert">New Song</string>
    <string name="title_activity_view_lyrics">ViewLyricsActivity</string>
    <string name="view">Song</string>
    <string name="btnova">Inserir</string>
    <string name="title_activity_view_list">ViewListActivity</string>

</resources>
