<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F5F5"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".TimesActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@drawable/headerbottom"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/lyric_Header_List"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/musicasll" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.90" >

        <ListView
            android:id="@+id/listView1"
            android:layout_marginTop="10dp" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/headerbottom"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="inserir"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bHome"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="5dp"
            android:autoLink="web"
            android:background="@drawable/botao_azul_seletor"
            android:onClick="voltar"
            android:padding="5dp"
            android:text="@string/voltar"
            android:textColor="#ffffff" />
        
        <Button
            android:id="@+id/bInserir"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginLeft="5dp"
            android:autoLink="web"
            android:background="@drawable/botao_azul_seletor"
            android:onClick="inserir"
            android:padding="5dp"
            android:text="@string/b_Lyric_Insert"
            android:textColor="#ffffff" />

    </LinearLayout>

</LinearLayout>
