<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".LyricsRegistryActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@drawable/headerbottom"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/header"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.80"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/artist_name"
            android:textColor="#808080" />

        <EditText
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/imagem"
            android:textColor="#808080" />
        
        <Button
            android:id="@+id/bImage"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="5dp"
            android:autoLink="web"
            android:background="@drawable/botao_azul_seletor"
            android:padding="5dp"
            android:text="Obter Imagem"
            android:textColor="#ffffff" />
        

        <Gallery
            android:id="@+id/gallery1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"            
            />

        <ImageView
            android:id="@+id/imViewArtist"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"            
            android:ems="10"
            android:gravity="top"
            android:src="@drawable/botao_azul_seletor" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/headerbottom"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bCancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginRight="5dp"
            android:autoLink="web"
            android:background="@drawable/botao_azul_seletor"
            android:gravity="center_vertical|center_horizontal|center"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/bSave"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginLeft="5dp"
            android:autoLink="web"
            android:background="@drawable/botao_azul_seletor"
            android:padding="5dp"
            android:text="@string/save"
            android:textColor="#ffffff" />

    </LinearLayout>

</LinearLayout>