<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F5F5"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".ViewListActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3975CB"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="5dp"
            android:src="@drawable/listamusica" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="#3975CB"
            android:paddingBottom="10dp"
            android:paddingLeft="3dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/lyric_Header_List"
            android:textColor="#ffffff" />



    </LinearLayout> 

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
 
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:gravity="center_horizontal|center_vertical"
       android:orientation="horizontal" 
       android:background="@drawable/categorias"
       android:layout_weight="1"> 

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/optMusica"
            android:textColor="#808080" />

    </LinearLayout>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="fill_parent"
       android:gravity="center_vertical"
       android:background="@drawable/categorias" >

       <ImageView
           android:id="@+id/imageView1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/separador" />

   </LinearLayout>

   <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:layout_weight="1" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/lyric_Header_artistas"
            android:textColor="#808080" />

    </LinearLayout>
    
    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content" >

       <EditText
           android:id="@+id/editText1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:paddingLeft="10dp"
           android:paddingTop="5dp"
           android:paddingBottom="5dp"
           android:hint="Pesquise uma música"
           android:textSize="15sp"
           android:textColor="#808080"
           android:ems="10"
           android:background="@drawable/searchtext" > 

           <requestFocus />
       </EditText>

   </LinearLayout>

    <LinearLayout
        android:id="@+id/musicasll" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.90" >

       

        <ListView
            android:id="@+id/listView1"
            android:layout_marginTop="10dp" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

    </LinearLayout>

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="10dp"
        android:background="#3975CB"
        android:gravity="center_vertical|right"
        android:orientation="horizontal" >

        

    </LinearLayout>

</LinearLayout>
